[Feature #163406783]  some layout bugs from the style.css

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ form input:first-child{
     margin: auto;
     color: white;
     background-color: green;
+    padding: 2%;
     font-family:sans-serif;
     text-align: center;
     font-size: 2rem;
@@ -107,32 +108,43 @@ input:focus{
     border: solid green 0.125rem;
     border-radius: 0.3125rem;
     outline: none;
-    transition: 300ms cubic-bezier(.2,.2,.7,-1)
-    /*background: rgb(230, 255, 230)*/
+    transition: 300ms cubic-bezier(.2,.2,.7,-1);
 }
 .eye-icon{
-    content: url("../img/eye-hide.png");
+    content: url("../img/eye-show.svg");
     display: inline-block;
     position: absolute;
-    width: 2.9rem;
+    width: 3rem;
     right: 0;
+    padding: 0.7rem;
     top: 27.5%;
     cursor: pointer;
     border-top-right-radius: 0.3125rem;
     border-bottom-right-radius: 0.3125rem;
 }
-.eye-icon:hover {
-    background: rgba(242, 242, 242, 0.7);
-    transition: background-color 300ms ease-in;
-}
+
 .warning {
-    display: none;
+    display: block;
+    width: 93.5%;
+    font-size: 1rem;
+    font-family: arial, sans-serif;
+    color: red;
+    padding: 4%;
+    border: solid red 0.125rem;
+    border-radius: 0.3125rem;
+    transition: 500ms cubic-bezier(.2,.2,.4,-3);
+}
+
+.warning::before {
+    content: "\26A0";
+    padding-right: 1rem;
+    font-weight: 700;
 }
 
 .fs {
     display: inline;
     position: relative;
-    visibility: visible;
+    visibility: hidden;
     color: green;
     font-family: sans-serif;
     font-size: 0.7rem;
@@ -141,7 +153,22 @@ input:focus{
     margin-left: 4%;
     background: white;
 }
-
+#back {
+    display: inline-block;
+    padding: 4%;
+    bottom: 75%;
+    width: 15%;
+    background-color: green;
+    color: white;
+    border: solid #ccc 0.1rem;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    position: absolute;
+    right: -0.9%;
+    font-size: 1.3rem;
+    font-weight: 900;
+    cursor: pointer;
+}
 .forgot, .sign-up {
     display: inline-block;
     font-family: sans-serif;
@@ -203,12 +230,17 @@ input:focus{
 @media screen and (min-width: 1023px){
     .form-container {
         width: 380px;
-        min-width: 650px;
+        min-width: 468px;
+
     }
 
     .eye-icon {
-        width: 4.1rem;
-        top: 23%;
+
     }
 }
 
+@media screen and (min-device-height: 720px), screen and (min-height: 720px) {
+    .form-container {
+        margin-top: 5%;
+    }
+}
